<resources>
    <string name="app_name">Fuel Bee</string>
    <string name="login">Login</string>

    <string name="register">Register</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_cart">My Cart</string>
    <string name="profile">Profile</string>

    <string name="petrol">Petrol</string>
    <string name="octane">Octane</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="pay_with_stripe">Pay with Stripe</string>
    <string name="proceed_to_payment">Proceed to Payment</string>


</resources>