<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bees"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:background="@color/black"
            tools:ignore="ExtraText">

            <TextView
                android:text="@string/signup"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:text="Fill up your credentials"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_name"
                android:background="@drawable/yellow_border"
                android:layout_marginTop="20dp"
                android:hint="@string/name"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/baseline_person_24"
                android:paddingLeft="20dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/yellow_border"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/baseline_email_24"
                android:paddingLeft="20dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/yellow_border"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:paddingLeft="20dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"
                android:inputType="textPassword"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirmPass"
                android:background="@drawable/yellow_border"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/white"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:paddingLeft="20dp"
                android:drawablePadding="8dp"
                android:textColor="@color/white"
                android:inputType="textPassword"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:id="@+id/btn_register"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"
                android:background="@drawable/rounded_button"
                />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yesAccount"
                android:text="@string/have_an_account_login"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"/>





        </LinearLayout>
    </androidx.cardview.widget.CardView>





    




























</LinearLayout>